# poser

./: .coveragerc  .gitignore  .travis.yml  MANIFEST.in  _script.py  articles.ipynb  articles.py  composites.html  composites.ipynb  composites.md  composites.py  conf.py  data_model.ipynb  determiners.ipynb  determiners.py  docify.tpl  fidget.ipynb  fidget.py  index.rst  poser.html  poser.ipynb  poser.py  pyproject.toml  pytest.ini  readme.ipynb  readme.md  readme.py  requirements-test.txt  requirements.txt  sanitize.cfg  setup.ipynb  setup.py  test_compositions.ipynb  test_compositions.py  test_methodz.ipynb  test_poser.ipynb  test_poser_api.ipynb  testing.ipynb  tests.ipynb  tricks.yml
.ipynb_checkpoints/: fidget-Copy1-checkpoint.ipynb  fidget-checkpoint.ipynb
articles/: __init__.py  attributes.ipynb  attributes.py  composites.ipynb  composites.py  conditions.ipynb  conditions.py  objects.ipynb  objects.py  operations.ipynb  operations.py  partials.ipynb  partials.py
composites/: __init__.py  attributes.ipynb  attributes.py  canonical.ipynb  canonical.py  composites.ipynb  composites.py  conditions.ipynb  conditions.py  objects.ipynb  objects.py  operations.ipynb  operations.py  partials.ipynb  partials.py
docs/: composition.md  data model.ipynb  setters.md
fidget/: __init__.ipynb  __init__.py  _python.py  attributes.ipynb  attributes.py  callables.ipynb  callables.py  calls.ipynb  calls.py  chain.ipynb  chain.py  classes.py  composite.ipynb  composite.py  composites.ipynb  composites.py  container.ipynb  container.py  fidgets.ipynb  fidgets.py  functions.ipynb  functions.py  model.ipynb  model.py  objects.py  (+13 more)
(+36 files in other folders)
