[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "poser"
author = "deathbeds"
author-email = "tony.fast@gmail.com"
requires = ["toolz"]
keywords = ""
home-page = "https://github.com/deathbeds/poser"
license = "BSD-3-Clause"
description-file = 'readme.md'


[tool.flit.metadata.requires-extra]
[tool.flit.metadata.urls]    
[tool.flit.scripts]
[tool.flit.sdist]

